# cpp-project-template

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
cmake/: boost.cmake  copy_compile_commands.cmake  cryptopp.cmake  fmt.cmake  glfw.cmake  google-test.cmake  imgui.cmake  qt.cmake  scn.cmake  sdl.cmake  third-party.cmake
scripts/: copy-deps.sh  run-gettext.sh
scripts/linux/: archlinux-setup.sh
scripts/windows/: add-wt-profiles.bat  init-mirrors.bat  rank-mirrors.bat  recover-mirrors.bat  setup.bat  setup.py  setup_utils.py  update-msys2.bat
scripts/windows/bash/: init-mirrors.sh  install-deps.sh  rank-mirrors.sh  recover-mirrors.sh  setup-pacman.sh  setup-python.sh  setup.sh  update-packages.sh
scripts/windows/powershell/: add-wt-profiles.ps1  functions.psm1  install-msys2.ps1  setup-python.ps1  setup.ps1
scripts/windows/python/: setup.py  setup_utils.py
src/: CMakeLists.txt  main.cpp
src/example/: CMakeLists.txt  main.cpp
src/imgui-demo/: CMakeLists.txt  main.cpp
src/my-deque/: CMakeLists.txt  main.cpp  my-deque.h
